--- a/TEMA5/ejercicioStyckiNotes/index.html
+++ b/TEMA5/ejercicioStyckiNotes/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container" id="container">
-        <img src="/TEMA4/ejercicioStyckiNotes/nuevaNota.png" class="nuevaNota" onclick="CreateNote()" alt="+">
+        <img src="nuevaNota.png" class="nuevaNota" onclick="CreateNote()" alt="+">
     </div>
     
     <script src="index.js"></script>
